# misc

./: consolidation.py  extract tables vision.py  extract tables.py  mermaid.py  prompts_cleaned.py  qdrant.py  rubric_audit.json  sdk_report.md
risk_memory/lcl-mem-2/: .gitignore  Makefile  README.md  pyproject.toml
risk_memory/lcl-mem-2/configs/: denylists.yaml  prefs_registry.yaml
risk_memory/lcl-mem-2/src/risk_agent_memory/: __init__.py  cli.py  config.py  db.py  embedding.py
risk_memory/lcl-mem-2/src/risk_agent_memory/agent/: hooks.py  options.py  subagents.py
risk_memory/lcl-mem-2/src/risk_agent_memory/baseline/: __init__.py
risk_memory/lcl-mem-2/src/risk_agent_memory/evals/: ace_suite.py  findings_suite.py  gen.py  harness.py  prefs_suite.py
risk_memory/lcl-mem-2/src/risk_agent_memory/mock_atom/: fixtures.py  server.py
risk_memory/lcl-mem-2/src/risk_agent_memory/stores/ace/: compiler.py  (+3 more)
risk_memory/lcl-mem-2/tests/: conftest.py  test_ace.py  test_agent_glue.py  test_findings.py  test_gen_and_suite.py  test_prefs.py
risk_memory/lcm-mem/: .gitignore  Makefile  README.md  pyproject.toml
risk_memory/lcm-mem/configs/: data.yaml  longmemeval.yaml  phase1.yaml
risk_memory/lcm-mem/src/lcm_mem/: __init__.py  cli.py  common.py
risk_memory/lcm-mem/src/lcm_mem/data/: hard_negatives.py  longmemeval.py  musique.py
risk_memory/lcm-mem/src/lcm_mem/encoder/: embed.py  finetune.py
risk_memory/lcm-mem/src/lcm_mem/evals/: ablations.py  kill_experiment.py  longmemeval_runner.py  run_phase1.py
risk_memory/lcm-mem/src/lcm_mem/llm/: gateway.py  prompts.py
risk_memory/lcm-mem/src/lcm_mem/memory/: compose.py  ingest.py  provenance.py  store.py
risk_memory/lcm-mem/src/lcm_mem/predictor/: baselines.py  model.py  train.py
risk_memory/lcm-mem/tests/: conftest.py  test_compose.py  test_gateway.py  test_hard_negatives.py  test_musique.py  test_phase1_smoke.py  test_predictor.py  test_provenance.py  test_store.py
(+350 files in other folders)
