[project]
name = "risk-agent-memory"
version = "0.1.0"
description = "Memory system for a risk intelligence agent: ACE playbook, preference store, findings store (implementation_v1.md)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "claude-agent-sdk>=0.1",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
graphiti = ["graphiti-core>=0.5"]
dev = ["pytest>=8.2", "hypothesis>=6.100", "pytest-asyncio>=0.23", "pytest-timeout>=2.3"]

[project.scripts]
ram = "risk_agent_memory.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_agent_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
asyncio_mode = "auto"
markers = ["integration: uses the real sentence-transformer embedder"]
